--- a/css/navigations.css
+++ b/css/navigations.css
@@ -2,7 +2,7 @@ nav {
   display: flex;
   position: relative;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around ;
   height: 150px;
   max-width: 100%;
   font-size: 16px;
@@ -22,10 +22,10 @@ nav img {
 }
 
 .nav-line {
-  display: block;
+  display: inline-block;
   position: relative;
   height: 1px;
-  width: 473px;
+  width: 20vw;
   background-color: #979797;
 }
 
@@ -33,8 +33,8 @@ nav ul {
   display: flex;
   list-style-type: none;
   align-items: center;
-  padding-right: 250px;
-  max-width: 100%;
+  justify-content: center;
+  padding-right: 10%;
   height: 96px;
   backdrop-filter: blur(8px);
   background-color: rgba(255, 255, 255, 0.04)
@@ -72,4 +72,47 @@ nav ul li strong {
   height: 3px;
   width: 85px;
   background: #979797;
+}
+
+
+/* Tablets */
+@media only screen and (max-width: 1300px) {
+  nav {
+    display: flex;
+    position: relative;
+    align-items: flex-start;
+    max-width: 100%;
+    font-size: 16px;
+    letter-spacing: 2.7px;
+    color: white;
+    text-transform: uppercase;
+    max-width: 100%;
+    font-family: 'Barlow Condensed', sans-serif;
+  }
+
+  nav img {
+    padding: 30px 30px;
+  }
+
+  .nav-line {
+    display: none;
+  }
+
+  nav ul {
+    display: flex;
+    align-items: right;
+    justify-content: center;
+    padding-right: 0%;
+    height: 96px;
+  }
+
+  nav ul li {
+    padding: 0 20px;
+  }
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 768px) {
+
 }
