--- a/css/index.css
+++ b/css/index.css
@@ -156,6 +156,7 @@ p {
     align-items: center;
     justify-content: center;
     position: relative;
+    margin-top: 0px;
     text-align: center;
     height: 100%;
     width: 100%;
