--- a/css/navigations.css
+++ b/css/navigations.css
@@ -50,6 +50,7 @@ nav ul {
   padding-right: 10%;
   height: 96px;
   backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   background-color: rgba(255, 255, 255, 0.04)
 }
 
@@ -168,6 +169,7 @@ nav ul li strong {
     height: 100vh;
     z-index: 11;
     backdrop-filter: blur(35px);
+    -webkit-backdrop-filter: blur(35px);
     transition: width ease-in-out 2s;
   }
 
