--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ h1 {
 
 
 /* Tablets */
-@media only screen and (max-width: 1050px) {
+@media only screen and (max-width: 1250px) {
   #homepage::before {
     content: '';
     position: absolute;
@@ -89,17 +89,18 @@ h1 {
     background: url('/starter-code/assets/home/background-home-tablet.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     z-index: -10;
   }
 
+  
   .homepage-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    transform: translateY(5%);
+    transform: translateY(0%);
     text-align: center;
     height: 100%;
     width: 100%;
@@ -108,13 +109,13 @@ h1 {
   }
   
   .homepage-container > div {
-    max-width: 600px;
+    max-width: 700px;
   }
   
   .homepage-container > div p {
     max-width: 70%;
     font-size: 16px;
-    margin: auto;
+    margin: 0 auto;
   }
 
   h1 {
@@ -128,7 +129,6 @@ h1 {
   /* Explore Button */
   #explore {
     border: none;
-    position: relative;
     border-radius: 50%;
     height: 242px;
     width: 242px;
