--- a/css/destinations.css
+++ b/css/destinations.css
@@ -24,6 +24,10 @@ html {
 
 /* Destinations - Moon */
 
+#destination {
+  width: 100%;
+}
+
 .destination_container {
   max-width: 80%;
   margin: 0 auto;
@@ -37,6 +41,10 @@ html {
 .destination_container > h5 > strong {
   color: hsl(0, 0%, 25%);
   padding-right: 20px;
+}
+
+.destination_main {
+  width: 100%;
 }
 
 .destination_main > img {
@@ -142,8 +150,7 @@ html {
     -o-background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    height: auto;
     z-index: -10;
   }
 
@@ -186,6 +193,7 @@ html {
     padding-right: 20px;
   }
 
+
   .destination_main > img {
     width: 300px;
     aspect-ratio: 1/1;
@@ -218,17 +226,25 @@ html {
   
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 768px) {
   html {
-    background: url('/starter-code/assets/destination/background-destination-mobile.jpg');
-    width: 480px;
-    height: auto;
+    background-image: url('/starter-code/assets/destination/background-destination-mobile.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -10;
+  }
+
+  .destination_container > h5 {
+    color: var(--white);
+    font-size: 16px;
+    text-align: center;
+  }
+  
+  .destination_container > h5 > strong {
+    padding-right: 0;
   }
 
   h2 {
@@ -239,6 +255,46 @@ html {
     width: 170px;
     aspect-ratio: 1/1;
   }  
+
+  .destination_text_spacing {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .destination_line_break {
+    width: 60%;
+    height: 1px;
+    background-color: #383B4B;
+    margin-bottom: 20px;
+  }
+  
+  .destination_secondary_nav > ul {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    position: relative;
+    height: 34px;
+    color: var(--light);
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.7px;
+    margin-bottom: 50px;
+  }
+  
+  .destination_secondary_nav > ul li {
+    cursor: pointer;
+  }
+  
+  .destination_secondary_nav > ul li:not(:first-child) {
+    padding-left: 15px;
+  }
+  
+  .destination_secondary_nav_active {
+    width: 36px;
+  }
 
   .destination_statistics {
     display: flex;
