--- a/css/crew.css
+++ b/css/crew.css
@@ -10,74 +10,51 @@
 /* Nav */
 @import url('/css/navigations.css');
 
-body {
-  height: 100vh;
-  background-color: #0C0E19;
+.mobile {
+  margin-bottom: 30px;
 }
 
-
-#crew::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+html {
   background: url('/starter-code/assets/crew/background-crew-desktop.jpg');
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  z-index: -1;
+  z-index: -10;
 }
 
-.crew_container {
-  max-width: 1300px;
-  margin: 0 auto; 
-}
-
-h5 {
-  color: var(--white);
-  margin: 70px 0 0 0;
-}
-
-h5 > strong {
-  color: hsl(0, 0%, 25%);
-  padding-right: 20px;
-}
-
-.douglas {
+.main {
   display: flex;
-  position: relative;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 700px;
+  margin-top: 0px;
 }
 
-.douglas > div {
-  width: 50%;
-}
-
-p {
-  color: #D0D6F9;
-  width: 60%;
-  line-height: 1.6;
-  letter-spacing: 1px;
-  margin-bottom: 100px;
-  
-}
-
-h4 {
-  color: hsl(0, 0%, 50%);
+.main-data h4 {
   font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
   margin-bottom: 20px;
 }
 
-h3 {
+.main-data h3 {
   font-weight: 400;
   margin-bottom: 30px;
 }
 
+.main-data p {
+  margin-bottom: 100px;
+}
+
+.main > img {
+  right: 0;
+  bottom: 0;
+  max-width: 568px;
+}
+
+
+/* Dotted Nav */
 .dotted_nav {
   display: flex;
   list-style: none;
@@ -105,49 +82,121 @@ h3 {
   margin-left: 24px;
 }
 
-.img {
-  position: absolute;
-  bottom: 0;
-  right: -100px;
-  width: 50%;
-}
-
-.mark {
-  display: none;
-  position: relative;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 700px;
-}
-
-.mark > div {
-  width: 50%;
-}
-
-.victor {
-  display: none;
-  position: relative;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 700px;
-}
-
-.victor > div {
-  width: 50%;
-}
-
+.mark,
+.victor,
 .anousheh {
-  position: relative;
-  max-width: 100%;
   display: none;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 700px;
 }
 
-.anousheh > div {
-  width: 50%;
+
+/* Tablet */
+@media only screen and (max-width: 1200px) {
+  html {
+    background: url('/starter-code/assets/crew/background-crew-tablet.jpg');
+    width: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -10;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 0px;
+  }
+
+  .main-data h4 {
+    margin-bottom: 10px;
+  }
+
+  .main-data h3 {
+    margin-bottom: 15px;
+  }
+
+  .main-data p {
+    margin: 0 auto 40px auto;
+    width: 60%;
+  }
+
+  .dotted_nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+  }
+
+  .main > img {
+    right: 0;
+    bottom: 0;
+    max-width: 456px;
+    margin-top: 30px;
+  }
+
+
+  
+  
+
+  .mark,
+  .victor,
+  .anousheh {
+    display: none;
+  }
+}
+
+
+/* Mobile */
+@media only screen and (max-width: 768px) {
+  html {
+    background: url('/starter-code/assets/crew/background-crew-mobile.jpg');
+    width: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -10;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    margin-top: 0px;
+  }
+
+  .main > img {
+    right: 0;
+    bottom: 0;
+    max-width: 327px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
+
+  .main-data h4 {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .main-data h3 {
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
+
+  .main-data p {
+    font-size: 15px;
+    width: 90%;
+  }
+
+
+  .mark,
+  .victor,
+  .anousheh {
+    display: none;
+  }
 }
