--- a/css/destinations.css
+++ b/css/destinations.css
@@ -28,12 +28,7 @@ html {
   width: 100%;
 }
 
-.destination_container {
-  max-width: 80%;
-  margin: 0 auto;
-}
-
-.destination_container > h5 {
+/* .destination_container > h5 {
   color: var(--white);
   margin: 100px 0;
 }
@@ -41,7 +36,7 @@ html {
 .destination_container > h5 > strong {
   color: hsl(0, 0%, 25%);
   padding-right: 20px;
-}
+} */
 
 .destination_main {
   width: 100%;
@@ -182,7 +177,7 @@ html {
     justify-content: center;
   }
 
-  .destination_container > h5 {
+  /* .destination_container > h5 {
     color: var(--white);
     font-size: 22px;
     margin: 10px 0 60px 0;
@@ -191,7 +186,7 @@ html {
   .destination_container > h5 > strong {
     color: hsl(0, 0%, 25%);
     padding-right: 20px;
-  }
+  } */
 
 
   .destination_main > img {
@@ -237,7 +232,7 @@ html {
     z-index: -10;
   }
 
-  .destination_container > h5 {
+  /* .destination_container > h5 {
     color: var(--white);
     font-size: 16px;
     text-align: center;
@@ -245,7 +240,7 @@ html {
   
   .destination_container > h5 > strong {
     padding-right: 0;
-  }
+  } */
 
   h2 {
     font-size: 60px;
