--- a/css/destinations.css
+++ b/css/destinations.css
@@ -136,6 +136,10 @@ html {
   justify-content: space-evenly;
 }
 
+.global_subheading {
+  margin-bottom: 100px;
+}
+
 @media only screen and (max-width: 1200px) {
 
   html {
