--- a/css/navigations.css
+++ b/css/navigations.css
@@ -54,7 +54,7 @@ nav ul {
   background-color: rgba(255, 255, 255, 0.04)
 }
 
-nav ul li {
+nav ul li:not(:last-child) {
   padding: 0 50px;
 }
 
@@ -121,8 +121,8 @@ nav ul li strong {
     height: 96px;
   }
 
-  nav ul li {
-    padding: 0 20px;
+  nav ul li:not(:last-child) {
+    padding: 0 30px;
   }
 
   nav strong {
@@ -175,6 +175,7 @@ nav ul li strong {
     text-transform: uppercase;
     max-width: 100%;
     font-family: 'Barlow Condensed', sans-serif;
+    text-align: center;
   }
 
   nav img {
