--- a/css/technology.css
+++ b/css/technology.css
@@ -10,29 +10,27 @@
 /* Nav */
 @import url('/css/navigations.css');
 
-body {
-  position: relative;
-  height: 100vh;
+.mobile img {
+  display: none;
 }
 
-
-#technology::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+html {
   background: url('/starter-code/assets/technology/background-technology-desktop.jpg');
+  width: 100%;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom;
-  z-index: -1;
+  z-index: -10;
 }
 
-.technology_container {
-  max-width: 1400px;
-  margin: 0 auto; 
+.main div div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .ul_nav ul {
@@ -85,40 +83,35 @@ h3 {
   margin-bottom: 15px;
 }
 
-.launch_vehicle {
-  display: flex;
+/* Tablet */
+@media only screen and (max-width: 1200px) {
+
+  html {
+    background: url('/starter-code/assets/technology/background-technology-tablet.jpg');
+    width: 100%;
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -10;
+  }
 }
 
-.main_content {
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
 
+/* Mobile */
+@media only screen and (max-width: 768px) {
 
-.main_info {
-  width: 40%;
-}
-
-.main_info > p {
-  width: 85%;
-  line-height: 1.8;
-  font-size: 20px;
-}
-
-.img {
-  position: absolute;
-  right: 0;
-}
-
-.img img {
-  width: 600px;
-}
-
-.spaceport {
-  display: none;
-}
-
-.space_capsule {
-  display: none;
+  html {
+    background: url('/starter-code/assets/technology/background-technology-mobile.jpg');
+    width: 100%;
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -10;
+  }
 }
