--- a/css/technology.css
+++ b/css/technology.css
@@ -10,7 +10,7 @@
 /* Nav */
 @import url('/css/navigations.css');
 
-.mobile img {
+.mobile {
   display: none;
 }
 
@@ -26,11 +26,25 @@ html {
   z-index: -10;
 }
 
-.main div div {
+.spaceport {
+  display: none;
+}
+
+.space_capsule {
+  display: none;
+}
+
+.main > div {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.main-info {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  width: 770px;
 }
 
 .ul_nav ul {
@@ -76,6 +90,7 @@ h5 > strong {
 h3 {
   font-weight: 400;
   margin-bottom: 20px;
+  font-size: 56px;
 }
 
 .subheading_2 {
@@ -97,6 +112,49 @@ h3 {
     background-size: cover;
     z-index: -10;
   }
+
+  .desktop {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
+
+  .main > div {
+    display: flex;
+    flex-direction: column;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  ul li {
+    margin-left: 10px;
+    text-align: center;
+  }
+
+  .ul_nav ul {
+    margin-top: 50px;
+    margin-right: 0px;
+    margin-bottom: 25px;
+    list-style: none;
+    font-family: 'Bellefair', serif;
+  }
+
+  .main-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 75px;
+    width: 458px;
+  }
 }
 
 
@@ -113,5 +171,35 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -10;
+  }
+
+  .ul_nav ul {
+    margin-top: 30px;
+    margin-right: 0px;
+    margin-bottom: 15px;
+    list-style: none;
+    font-family: 'Bellefair', serif;
+  }
+
+  .ul_nav ul li {
+    font-size: 32px;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border: 1px solid hsl(0, 0%, 25%);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    cursor: pointer;
+  }
+
+  h3 {
+    font-size: 36px;
+  }
+
+  .main-info {
+    width: 100%;
   }
 }
