--- a/css/technology.css
+++ b/css/technology.css
@@ -164,7 +164,7 @@ h3 {
   html {
     background: url('/starter-code/assets/technology/background-technology-mobile.jpg');
     width: 100%;
-    height: 100%;
+    height: 900px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
